2021-03-01 (March 1, 2021) First entry into CHANGELOG.
- I started the project: creating one web page with a text area and a button.
- I added a checkbox with functionality.
- I started the project as a way to type ISO233 characters without installing an extra keyboard.

    v1.00 2021-03-01
    Initial version. A textbox, a button and a checkbox.

    v1.01: 2021-03-01
    - allowed lowercase D with underdot to be typed. It was missing from the table.

    v1.02: 2021-03-01
    - ensure that checkbox does not go out of sync after page refresh.

2021-03-01 v1.10
- Switched to generating code using a template. Now a language can be added by adding two files, one
for the name of the language, and another for the substitutions that it supports. The developer then must
edit the shell script "generateWebPages.sh" and run it, and it should produce a suitable result.

At the same time the following orthographies have been added: French, Spanish or Portuguese, Maltese and Berber Latin alphabet.

2021-03-02 (no version change still v1.10)
- Add modern south arabian languages: Mehri and Soqotri

- Add support for German.

2021-03-02 v1.11
- Add padding to text area to make text clearer: (because the diacritics sometimes got cut off)

2021-03-02 (no version change)
- Add support for Pinyin
- Add support for Polish
- Add support for Icelandic
- Add support for Irish
- Add support for Scottish Gaelic
- Add support for Latin

2021-03-02 v1.20
- Generate a spreadsheet formula (useful for people who use spreadsheet applications)
- Generate terminal command using Python 3 (for people who work on the command line)

2021-03-03 v1.21
- Fix bug where second character input by user was being ignored. As of this version, it is no longer ignored.
- Implement Buckwalter transliteration system (a reversible romanization system for Arabic) (both ways)