@@ -2,22 +2,4 @@
 # Uses template.html as a template, and replaces some text in it to make a new web page.
 # for each language.
 
-python3 generateWebPage.py iso233 < ./template.html > ./iso233QuickTypist.html
-python3 generateWebPage.py berber-latin-alphabet < ./template.html > ./berber-latin-alphabetQuickTypist.html
-python3 generateWebPage.py french < ./template.html > ./frenchQuickTypist.html
-python3 generateWebPage.py spanish < ./template.html > ./spanishQuickTypist.html
-python3 generateWebPage.py maltese < ./template.html > ./malteseQuickTypist.html
-python3 generateWebPage.py mehri-soqotri < ./template.html > ./mehri-soqotriQuickTypist.html
-python3 generateWebPage.py german < ./template.html > ./germanQuickTypist.html
-python3 generateWebPage.py pinyin < ./template.html > ./pinyinQuickTypist.html
-python3 generateWebPage.py polish < ./template.html > ./polishQuickTypist.html
-python3 generateWebPage.py icelandic < ./template.html > ./icelandicQuickTypist.html
-python3 generateWebPage.py irish < ./template.html > ./irishQuickTypist.html
-python3 generateWebPage.py scottish-gaelic < ./template.html > ./scottish-gaelicQuickTypist.html
-python3 generateWebPage.py latin < ./template.html > ./latinQuickTypist.html
-python3 generateWebPage.py qamus-buckwalter < ./template.html > ./qamus-buckwalterQuickTypist.html
-python3 generateWebPage.py qamus-buckwalter-inverse < ./template.html > ./qamus-buckwalter-inverseQuickTypist.html
-
-
-
-
+python3 generateAll.py
